--- a/HomeSync.Client/App.config
+++ b/HomeSync.Client/App.config
@@ -3,7 +3,7 @@
 		<supportedRuntime version="v4.0"/>
 	</startup>
 	<appSettings>
-		<add key="ip-address" value="10.1.1.100"/>
+		<add key="server-address" value="10.1.1.100"/>
 		<add key="server-port" value="65432"/>
 		<add key="broker-all" value="true"/>
 	</appSettings>
