--- a/HomeSync.Server/HomeSync.Server.csproj
+++ b/HomeSync.Server/HomeSync.Server.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Classes\Network\NetworkClient.cs" />
     <Compile Include="Classes\Network\NetworkServer.cs" />
     <Compile Include="Classes\Recording\RecordingsJson.cs" />
+    <Compile Include="Classes\Retry.cs" />
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
