Add Retry features

--- a/HomeSync.Client/HomeSync.Client.csproj
+++ b/HomeSync.Client/HomeSync.Client.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Classes\Network\NetworkClient.cs" />
     <Compile Include="Classes\Network\NetworkServer.cs" />
     <Compile Include="Classes\Recording\RecordingsJson.cs" />
+    <Compile Include="Classes\Retry.cs" />
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
