--- a/HomeSync.Client/HomeSync.Client.csproj
+++ b/HomeSync.Client/HomeSync.Client.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Classes\Log.cs" />
     <Compile Include="Classes\Network\NetworkClient.cs" />
     <Compile Include="Classes\Network\NetworkServer.cs" />
+    <Compile Include="Classes\Recording\RecordingRequest.cs" />
     <Compile Include="Classes\Recording\RecordingsJson.cs" />
     <Compile Include="Classes\Retry.cs" />
     <Compile Include="Settings.cs">
