--- a/HomeSync.Client/App.config
+++ b/HomeSync.Client/App.config
@@ -3,8 +3,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
   <appSettings>
-    <add key="server-address" value="10.1.1.100"/>
-    <add key="server-port" value="65430"/>
+    <add key="shared-passkey" value="l2n6h5b3"/>
+    <add key="network-port" value="65430"/>
+    <add key="application-state" value="HomeSync.state"/>
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
   <system.web>
